compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_bit_array_pattern_discard_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1356
expression: let assert <<_iDontCare>> = <<97>>
---
----- SOURCE CODE
let assert <<_iDontCare>> = <<97>>

----- ERROR
error: Invalid discard name
  ┌─ /src/one/two.rakun:1:14
  │
1 │ let assert <<_iDontCare>> = <<97>>
  │              ^^^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _i_dont_care
