compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_bit_array_pattern_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: let assert <<bitValue>> = <<73>>
---
error: Invalid variable name
  ┌─ /src/one/two.rakun:1:14
  │
1 │ let assert <<bitValue>> = <<73>>
  │              ^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9,
or _.
Try: bit_value
