compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_case_variable_discard_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1381
expression: "case 21 { _twentyOne -> {Nil} }"
---
----- SOURCE CODE
case 21 { _twentyOne -> {Nil} }

----- ERROR
error: Invalid discard name
  ┌─ /src/one/two.rakun:1:11
  │
1 │ case 21 { _twentyOne -> {Nil} }
  │           ^^^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _twenty_one
