compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_case_variable_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 21 { twentyOne -> {Nil} }"
---
error: Invalid variable name
  ┌─ /src/one/two.rakun:1:11
  │
1 │ case 21 { twentyOne -> {Nil} }
  │           ^^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9,
or _.
Try: twenty_one
