compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_list_pattern_discard_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let assert [_elemOne] = [False]"
---
error: Invalid discard name
  ┌─ /src/one/two.rakun:1:13
  │
1 │ let assert [_elemOne] = [False]
  │             ^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _elem_one
